<resources>
    <string name="app_name">আমার ময়মনসিংহ</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="dialog_title">close</string>
    <string name="mym_1">নামকরণ

মোগল আমলে মোমেনশাহ নামে একজন সাধক ছিলেন, তাঁর নামেই মধ্যযুগে অঞ্চলটির নাম হয় মোমেনশাহী। ষোড়শ শতাব্দীতে বাংলার স্বাধীন সুলতান সৈয়দ আলাউদ্দিন হোসেন শাহ তাঁর পুত্র সৈয়দ নাসির উদ্দিন নসরত শাহর জন্য এ অঞ্চলে একটি নতুন রাজ্য গঠন করেছিলেন, সেই থেকেই নসরতশাহী বা নাসিরাবাদ নামের সৃষ্টি। নাসিরাবাদ নাম পরিবর্তন হয়ে ময়মনসিংহ হয় একটি ভুলের কারণে। বিশ টিন কেরোসিন বুক করা হয়েছিল বর্জনলাল এন্ড কোম্পানীর পক্ষ থেকে নাসিরাবাদ রেল স্টেশনে। এই মাল চলে যায় রাজপুতনার নাসিরাবাদ রেল স্টেশনে। এ নিয়ে অনেক দুর্ভোগ পোহাতে হয়। পরবর্তীতে আরো কিছু বিভ্রান্তি ঘটায় রেলওয়ে স্টেশনের নাম পরিবর্তন করে ময়মনসিংহ রাখা হয়। সেই থেকে নাসিরাবাদের পরিবর্তে ময়মনসিংহ ব্যবহৃত হয়ে আসছে।


জেলা ঘোষণার তারিখ

১৭৮৭ খ্রিস্টাব্দের ১লা মে ময়মনসিংহ জেলা সৃষ্টি হয়। এই জেলার আকার সময় সময় পরিবর্তিত হয়েছে। ১৯৬৯ খ্রিস্টাব্দে ময়মনসিংহ জেলা থেকে টাঙ্গাইল মহকুমাকে এবং ১৯৭৮ খ্রিস্টাব্দে জামালপুর মহুকুমাকে পৃথক করে জেলায় উন্নীত করা হয়। ১৯৮৪ খ্রিস্টাব্দে ময়মনসিংহ জেলা থেকে শেরপুর, নেত্রকোনা ও কিশোরগঞ্জ মহকুমাকে পৃথক পৃথক জেলায় উন্নীত করা হয়।



অবস্থান
২৪০০২ ৩১  থেকে ২৫০২৫ ৫৬  উত্তর অক্ষাংশ এবং ৮৯০৩৯ ০০" থেকে ৯১০১৫'৩৫" পূর্ব দ্রাঘিমাংশ- এ। উত্তরে গারোপাহাড় ও ভারতের মেঘালয় রাজ্য, দক্ষিণে গাজীপুর জেলা, পূর্বে নেত্রকোনা  ও কিশোরগঞ্জ জেলা এবং পশ্চিমে শেরপুর, জামালপুর ও টাঙ্গাইল জেলা অবস্থিত।



আয়তন ও গঠন

আয়তন ৪৩৬৩.৪৮ বর্গ কিলোমিটার। এটি ১৩টি উপজেলা, ১ টি সিটি   করপোরেশন , ১৪টি থানা, ১০ টি পৌরসভা ( ০৮টি ক শ্রেণীর, ০১টি খ শ্রেণীর, ০১টি গ শ্রেণীর), ১৪৫ টি ইউনিয়ন, ২২০১টি মৌজা, ২৭০৯টি গ্রাম নিয়ে গঠিত। উপজেলাসমূহের নাম-ঈশ্বরগঞ্জ, গফরগাঁও, গৌরীপুর, ত্রিশাল, ধোবাউড়া, নান্দাইল, ফুলপুর, তারাকান্দা,ফুলবাড়িয়া, ভালুকা, ময়মনসিংহ সদর, মুক্তাগাছা, হালুয়াঘাট।



জনসংখ্যা
জনশুমারি ও গৃহগণনা ২০২২ অনুযায়ী
১। ময়মনিসংহ সিটি কর্পোরেশন জনসংখ্যা  ৫,৭৬,৭২২
২। জনসংখ্যা- লিঙ্গভিত্তিক


মোট জনসংখ্যা ৫৮,৯৯,০৫২

পুরুষ ২৮,৯৭,৮৮০

নারী ২৯,৯৭,৯৩১

হিজড়া ৪৭১

লিঙ্গানুপাত ৯৬.৬৬%



৩। জনসংখ্যা- পল্লী ও শহরভিত্তিক

পল্লী-৪৫,৪৫,৬৪২

শহর- ১৩,৫০,৬৪০



৪। জনসংখ্যা- ধর্মভিত্তিক

মুসলমান- ৯৬.০১%

হিন্দু- ৩.৪২%

বৌদ্ধ- ০.০১%

খ্রিস্টান- ০.৫০%

অন্যান্য- ০.০৬%



৫। সাক্ষরতা

সাক্ষরতার হার- ৭০.৭৪%

পুরুষ- ৭২.১৪%

নারী- ৬৯.৪১%

হিজড়া- ৪৯.১২%



৬। জনসংখ্যার ঘনত্ব- প্রতি বর্গকিলোমিটারে ১,৩৪২ জন

৭। ক্ষুদ্র নৃগোষ্ঠী- ২৭,৬৫২



প্রাকৃতিক সম্পদ

নদ-নদীর সংখ্যা ২২টি, আয়তন ১১৪৪৫.২০ হেক্টর। নদীর নাম- ব্রহ্মপুত্র, সুতিয়া, ক্ষিরু, সাচালিয়া, পাগারিয়া, নাগেশ্বর, কাচাঁমাটিয়া, আয়মন, বানার, নরসুন্দা, বোরাঘাট, দর্শনা, রামখালী, বৈলারি, নিতাই, কংশ, ঘুঘুটিয়া, সাতারখালী, আকালিয়া, জলবুরুঙ্গা, চৌকা মরানদী, রাংসা নদী ইত্যাদি। বিল ও প্রধান প্লাবনভূমির সংখ্যা ১১৪০টি, আয়তন ৩০৭৬২.০০ হেক্টর। বনভূমি ৩৮৮৬০.৭৩ একর। বালু মহল ১৫টি, আয়তন ৮৭৪.৫০ একর। সাদামাটিমহল ১টি, আয়তন ২৪.৩৩ একর ইত্যাদি।



শিক্ষার হার ও শিক্ষা প্রতিষ্ঠান

জেলার শিক্ষার হার ৬৮% (পুরুষ ৪১.০৯%, মহিলা ৫৪%)। প্রাথমিক বিদ্যালয় মোট ২৬৮৯টি (তন্মধ্যে সরকারী ১২৪৯টি, বেসরকারী রেজিষ্টার্ড ৬২১টি, আন রেজিষ্টার্ড ২৭টি, উচ্চ বিদ্যালয় সংলগ্ন ৫৬টি, কিন্ডার গার্ডেন ১২৬টি, পরীক্ষণ ১টি, স্বতন্ত্র এবতেদায়ী মাদ্রাসা ২৩৪টি, উচ্চ মাদ্রাসা সংলগ্ন ২৪৩টি, কমিউনিটি ১১৪টি,  এনজিও ১৮টি)। নিম্ন মাধ্যমিক বিদ্যালয় ১০৫টি, ৯ম শ্রেণীর অনুমতি প্রাপ্ত বিদ্যালয় ৭২টি, মাধ্যমিক বিদ্যালয় ৪০৪টি, স্কুল এন্ড কলেজ ১৩টি, উচ্চ মাধ্যমিক বিদ্যালয় ৩১টি, ডিগ্রীকলেজ ২৭টি (সরকারী ৩টি, বেসরকারী ২৪টি), বিশ্ববিদ্যালয় কলেজ ২টি (সরকারী), বিশ্ববিদ্যালয় ২টি (সরকারী), মেডিক্যাল কলেজ ২টি (সরকারী ১টি, বেসরকারী ১টি), ক্যাডেট কলেজ ১টি, চারুকলা ইনষ্টিটিউট ১টি, হোমিওপ্যাথিক কলেজ ১টি, ইঞ্জিনিয়ারিং কলেজ ১টি, কারিগরি শারীরিক মহাবিদ্যালয় ১টি, ভোকেশনাল ইনষ্টিটিউট ২টি, শিক্ষা মহাবিদ্যালয় ১টি, কামিল মাদ্রাসা ৪টি, ফাযিল মাদ্রাসা ৪৭টি, আলিম মাদ্রাসা ৪২টি, দাখিল মাদ্রাসা ২৯৫টি, আর্ট স্কুল ১টি।



শিল্প ও কল কারখানা

বৃহৎ শিল্প ৩টি। উল্লেখযোগ্য মাঝারী ও ক্ষুদ্র শিল্প ও কল-কারখানা প্রায় ১৪১টি, তন্মধ্যে ৯০টি বিসিক শিল্প নগরী ময়মনসিংহে এবং বাকী প্রায় ৫০টি ভালুকায় অবস্থিত।



কৃষি
 মোট জমি ৪,৩৬,৩৪৮ হেক্টর, নীট ফসলী জমি ৩,৭২,৭০৭ হেক্টর। এক ফসলী জমি ৪০,১৭২ হেক্টর, দুই ফসলী জমি ২৪৮৩৩৫ হেক্টর, তিন ফসলী জমি ৮৩,৩৫০ হেক্টর, চার ফসলী জমি ৮৫০ হেক্টর। মোট ফসলী জমি ৭,৯০,২৯২ হেক্টর, ফসলের নিবিড়তা ২১২.০০%। কৃষি ব্লকের সংখ্যা ৫২৫টি।কৃষি বিষয়ক পরামর্শ কেন্দ্র ২৯০টি, সয়েল মিনিল্যাব ৫৯টি, বিএডিসি বীজ ডিলার ৩১৬ জন, বিসিআইসি সার ডিলার ১৪০ জন, কোল্ড ষ্টোর ১টি।



সেচসুবিধা

সেচাধীন জমি ২৫০৩৭০ হেক্টর। গভীর নলকুপ মোট ৩৪৫৪টি (বিদ্যুৎচালিত ২৬৬৬টি, ডিজেল চালিত ৭৮৮টি), অগভীর নলকুপ মোট ৪৯৬২৭টি (বিদ্যুৎ চালিত ৮৩৩০টি, ডিজেল চালিত৪১২৯৭টি), পাওয়ার পাম্প মোট ৪৪৭৮টি (বিদ্যুৎ চালিত ২০৯টি, ডিজেল চালিত ৪২৬৯টি)।



খাদ্যশস্য পরিস্থিতি
 খাদ্যশস্যের বাৎসরিক চাহিদা ৮,২৬,৭২৫ মেট্রিক টন, উৎপাদন ১৭,৯২,২৫৮ মেট্রিক টন, উদ্বৃত্ত ৭,৮৬,৩০৮ মেট্রিক টন। প্রধানতঃ ধান, পাট, গম, আলু, মসুর, ভুট্টা, সরিষা, চীনাবাদাম, পান, কলা, আনারস, কাঁঠাল ও শীতকালীন  শাকসবজি উৎপন্ন হয়।



মৎস্যসম্পদ

নদী ২২টি, আয়তন ১১৪৪৫.২০ হেক্টর; বিল ও প্রধান প্রধান প্লাবন ভূমি ১১৪০টি, আয়তন ৩০৭৬২.০০ হেক্টর; পুকুর ১৪০৩৩৪টি, আয়তন ২৬০৩৮.৬৫ হেক্টর (সরকারী পুকুর ৩৬৬টি, আয়তন ১৩০.২০ হেক্টর; বেসরকারী পুকুর ১৩৯৯৬৮টি, আয়তন ২৫৯০৮.০৫ হেক্টর)। নিবিড় পদ্ধতিতে মাছ চাষের আওতায় খামার (বেসরকারী বানিজ্যিক খামার) ৩২৫৯টি, আয়তন ৪৪৩০.৫৫ হেক্টর ও উৎপাদন ৭৯৬৭৪.৮৬ মেট্রিক টন। সনাতন/উন্নত সনাতন পদ্ধতিতে মাছ চাষের আওতায় পুকুর ১৩৬২৪৭টি, আয়তন ২১৬০৮.১০ হেক্টর ও উৎপাদন ৬৮৫১৭.৫৭ মেট্রিক টন। বেসরকারী মৎস্য হ্যাচারী ৭৭টি, বেসরকারী মৎস্য নার্সারী ২১১০টি, মৎস্য খাদ্যের দোকান/কারখানা ১১০টি, মৎস্য আড়তের সংখ্যা ৮২টি, বরফ কলের সংখ্যা ৫৩টি। জেলায় বার্ষিক মাছ উৎপাদন ১৬০৪০৪.০০০ মেট্রিক টন, বার্ষিক মাছের চাহিদা ৬৮০৩১.০০০ মেট্রিক টন, বার্ষিক মাছ উদ্বৃত্ত ৯২৩৭৩.০০০ মেট্রিক টন। মৎস্য কার্যক্রম সংশ্লিষ্ট এনজিও ৬টি (নামঃ সোসাইটি ফর সোসাল সার্ভিস, পদক্ষেপ, কারিতাস,ভিশন, সোসিও ইকোনমিক ডেভেলপমেন্ট এসোসিয়েশন।



পশু সম্পদ

জেলা পশু হাসপাতাল ১টি, পশু চিকিৎসালয় ১২টি, জেলা কৃত্রিম প্রজনন কেন্দ্র ১টি, কৃত্রিম প্রজনন উপকেন্দ্র ১৩টি, কৃত্রিম প্রজনন পয়েন্ট ১৮টি, এফডিআইএল ১টি, হাঁস প্রতিপালন ইউনিট ১টি। গবাদি পশুর খামার ১৮৫৫টি, ছাগলের খামার ১৮০৩টি, ভেড়ার খামার ১৫টি, মুরগী খামার ১৬৯৯টি (লেয়ার ৫৩১টি, ব্রয়লার ১১৬৮ টি),হাঁস খামার ১১৭৭টি, ব্রিডার খামার ৪টি। গরু ১৯,৭৭,৬৫১টি, মহিষ ৩১০৭৯টি, ছাগল ৭৩৮৯১০টি,ভেড়া ২০১০০টি, ঘোড়া ১১২১টি, শুকর ১১০৯টি, হাঁস ১১৪১৫৭৪টি, মুরগী ৭৭০৫৯৮০টি।বাৎসরিক উৎপাদন- দুধ ১.৭৮০ লক্ষ মেট্রিক টন, ডিম ২৮,৪৫,০৫,০০০টি, মাংস ২.৬৯ লক্ষ মেট্রিক টন। পশু সম্পদ কার্যক্রম সংশ্লিষ্ট এনজিও- ওয়ার্ল্ড ভিশন, সোসিও ইকোনমিক ডেভেলপমেন্ট এসোসিয়েশন।



স্বাস্থ্যকেন্দ্র

মেডিকেল কলেজ হাসপাতাল ২টি (সরকারী ১টি, বেসরকারী ১টি), সম্মিলিত সামরিক হাসপাতাল ১টি (১৪১ শয্যাবিশিষ্ট), বক্ষ ব্যাধি ক্লিনিক ১টি, উপজেলা স্বাস্থ্য কমপ্লেক্স ১১টি (৬টি ৫০ শয্যাবিশিষ্ট, ৫টি ৩১ শয্যাবিশিষ্ট), পরিবার কল্যাণ কেন্দ্র ৮৬টি, স্বাস্থ্য উপকেন্দ্র ৪৩টি, কমিউনিটি ক্লিনিক ৪১২টি (বর্তমানে চালু ৩৫৪টি), বিদ্যালয় স্বাস্থ্য কেন্দ্র ১টি, হোমিও হাসপাতাল ১টি, বেসরকারী ক্লিনিক ৭২টি, মিশনারি হাসপাতাল ১টি সরকারী অ্যাম্বুলেন্স ১৬টি (চালু ৯টি)। স্বাস্থ্য কার্যক্রম সংশ্লিষ্ট এনজিও ১৬টি।


যোগাযোগ ব্যবস্থা

উন্নত। পাকা সড়ক প্রায় ৯৬৪ কিলোমিটার, কাঁচা সড়ক ৭৮৫৮ কিলোমিটার, রেলপথ ১৫৯ কিলোমিটার ও নদী পথ ২২৩ কিলোমিটার। ঢাকাসহ পার্শ্ববর্তী জেলা শহর টাঙ্গাইল, নেত্রকোনা কিশোরগঞ্জ, জামালপুর ও গাজীপুরের সাথে পাকা সড়ক ও রেলপথের যোগাযোগ রয়েছে। রাজধানী ঢাকা থেকে ময়মনসিংহ জেলার দূরত্ব সড়ক পথে ১২১ কিমি এবং রেলপথে ১২৩ কিমি। জেলা সদর থেকে পাকা সড়ক পথে উপজেলার এবং ইউনিয়ন পরিষদের প্রায় সারাবছরই মোটরযান চলাচলের উপযোগী পাকা/কাঁচা রাস্তা রয়েছে। তবে জেলায় প্রবাহিত নদীসমূহের তলদেশ ভরাট হয়ে যাওয়ায় নদীগুলো নাব্যতা হারিয়েছে।



পোষ্টাল সুবিধা

ডাকঘর ২৯৮টি, পোষ্টাল কোড- ঈশ্বরগঞ্জ ২২৮০-২২৮২, গফরগাঁও ২২৩০-২২৩৪, গৌরীপুর ২২৭০-২২৭১, ত্রিশাল ২২২০-২২২৩, নান্দাইল ২২৯০-২২৯১, ফুলপুর ২২৫০-২২৫২, ফুলবাড়ীয়া ২২১৬, ভালুকা ২২৪০, ময়মনসিংহ সদর ২২০০-২২০৫, মুক্তাগাছা ২২১০, হালুয়াঘাট ২২৬০-২২৬২।</string>
    <string name="mp5"> আয়তন ৪৩৬৩.৪৮ বর্গ কিলোমিটার। এটি ১৩টি উপজেলা, ১ টি সিটি   করপোরেশন , ১৪টি থানা, ১০ টি পৌরসভা ( ০৮টি ক শ্রেণীর, ০১টি খ শ্রেণীর, ০১টি গ শ্রেণীর), ১৪৫ টি ইউনিয়ন, ২২০১টি মৌজা, ২৭০৯টি গ্রাম নিয়ে গঠিত। উপজেলাসমূহের নাম-ঈশ্বরগঞ্জ, গফরগাঁও, গৌরীপুর, ত্রিশাল, ধোবাউড়া, নান্দাইল, ফুলপুর, তারাকান্দা,ফুলবাড়িয়া, ভালুকা, ময়মনসিংহ সদর, মুক্তাগাছা, হালুয়াঘাট। </string>
    <string name="mp4">জেলার শিক্ষার হার ৬৮% (পুরুষ ৪১.০৯%, মহিলা ৫৪%)। প্রাথমিক বিদ্যালয় মোট ২৬৮৯টি (তন্মধ্যে সরকারী ১২৪৯টি, বেসরকারী রেজিষ্টার্ড ৬২১টি, আন রেজিষ্টার্ড ২৭টি, উচ্চ বিদ্যালয় সংলগ্ন ৫৬টি, কিন্ডার গার্ডেন ১২৬টি, পরীক্ষণ ১টি, স্বতন্ত্র এবতেদায়ী মাদ্রাসা ২৩৪টি, উচ্চ মাদ্রাসা সংলগ্ন ২৪৩টি, কমিউনিটি ১১৪টি,  এনজিও ১৮টি)। নিম্ন মাধ্যমিক বিদ্যালয় ১০৫টি, ৯ম শ্রেণীর অনুমতি প্রাপ্ত বিদ্যালয় ৭২টি, মাধ্যমিক বিদ্যালয় ৪০৪টি, স্কুল এন্ড কলেজ ১৩টি, উচ্চ মাধ্যমিক বিদ্যালয় ৩১টি, ডিগ্রীকলেজ ২৭টি (সরকারী ৩টি, বেসরকারী ২৪টি), বিশ্ববিদ্যালয় কলেজ ২টি (সরকারী), বিশ্ববিদ্যালয় ২টি (সরকারী), মেডিক্যাল কলেজ ২টি (সরকারী ১টি, বেসরকারী ১টি), ক্যাডেট কলেজ ১টি, চারুকলা ইনষ্টিটিউট ১টি, হোমিওপ্যাথিক কলেজ ১টি, ইঞ্জিনিয়ারিং কলেজ ১টি, কারিগরি শারীরিক মহাবিদ্যালয় ১টি, ভোকেশনাল ইনষ্টিটিউট ২টি, শিক্ষা মহাবিদ্যালয় ১টি, কামিল মাদ্রাসা ৪টি, ফাযিল মাদ্রাসা ৪৭টি, আলিম মাদ্রাসা ৪২টি, দাখিল মাদ্রাসা ২৯৫টি, আর্ট স্কুল ১টি।   </string>
    <string name="mp3"> ২৪০০২ ৩১ থেকে ২৫০২৫ ৫৬  উত্তর অক্ষাংশ এবং ৮৯০৩৯ ০০  থেকে ৯১০১৫ ৩৫  পূর্ব দ্রাঘিমাংশ- এ। উত্তরে গারোপাহাড় ও ভারতের মেঘালয় রাজ্য, দক্ষিণে গাজীপুর জেলা, পূর্বে নেত্রকোনা  ও কিশোরগঞ্জ জেলা এবং পশ্চিমে শেরপুর, জামালপুর ও টাঙ্গাইল জেলা অবস্থিত।</string>
    <string name="mp2"> ১৭৮৭ খ্রিস্টাব্দের ১লা মে ময়মনসিংহ জেলা সৃষ্টি হয়। এই জেলার আকার সময় সময় পরিবর্তিত হয়েছে। ১৯৬৯ খ্রিস্টাব্দে ময়মনসিংহ জেলা থেকে টাঙ্গাইল মহকুমাকে এবং ১৯৭৮ খ্রিস্টাব্দে জামালপুর মহুকুমাকে পৃথক করে জেলায় উন্নীত করা হয়। ১৯৮৪ খ্রিস্টাব্দে ময়মনসিংহ জেলা থেকে শেরপুর, নেত্রকোনা ও কিশোরগঞ্জ মহকুমাকে পৃথক পৃথক জেলায় উন্নীত করা হয়।</string>
    <string name="mp1">মোগল আমলে মোমেনশাহ নামে একজন সাধক ছিলেন, তাঁর নামেই মধ্যযুগে অঞ্চলটির নাম হয় মোমেনশাহী। ষোড়শ শতাব্দীতে বাংলার স্বাধীন সুলতান সৈয়দ আলাউদ্দিন হোসেন শাহ তাঁর পুত্র সৈয়দ নাসির উদ্দিন নসরত শাহ র জন্য এ অঞ্চলে একটি নতুন রাজ্য গঠন করেছিলেন, সেই থেকেই নসরতশাহী বা নাসিরাবাদ নামের সৃষ্টি। নাসিরাবাদ নাম পরিবর্তন হয়ে ময়মনসিংহ হয় একটি ভুলের কারণে। বিশ টিন কেরোসিন বুক করা হয়েছিল বর্জনলাল এন্ড কোম্পানীর পক্ষ থেকে নাসিরাবাদ রেল স্টেশনে। এই মাল চলে যায় রাজপুতনার নাসিরাবাদ রেল স্টেশনে। এ নিয়ে অনেক দুর্ভোগ পোহাতে হয়। পরবর্তীতে আরো কিছু বিভ্রান্তি ঘটায় রেলওয়ে স্টেশনের নাম পরিবর্তন করে ময়মনসিংহ রাখা হয়। সেই থেকে নাসিরাবাদের পরিবর্তে ময়মনসিংহ ব্যবহৃত হয়ে আসছে। </string>
</resources>