<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mp1_activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue">


        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back"/>

        <TextView
            android:padding="5dp"
            android:layout_marginLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="এক নজরে ময়মনসিংহ জেলা"
            android:fontFamily="@font/regular"/>




    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="১। ময়মনসিংহ জেলা নামকরণ"
                android:fontFamily="@font/regular"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/mp1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="২। জেলা ঘোষণার তারিখ "
                android:fontFamily="@font/regular"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="5dp"
                android:text="@string/mp2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="৩। ময়মনসিংহ জেলার ভৌগলিক অবস্থান ও সীমানাঃ"
                android:fontFamily="@font/regular"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/mp3"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="৪। ময়মনসিংহ জেলার শিক্ষার হার ও শিক্ষা প্রতিষ্ঠান"
                android:fontFamily="@font/regular"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/mp4"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="৫। আয়তন ও গঠন"
                android:fontFamily="@font/regular"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/mp5"/>




        </LinearLayout>



    </ScrollView>





</RelativeLayout>